--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=bdcc-enset-spring-mvc
+spring.datasource.username=sa
+spring.datasource.url=jdbc:h2:mem:products-db
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+server.port=8084
+spring.h2.console.enabled=true
